Fix line wrappiing when break-word/break-all and float with 100% width

This patch changes the line breaker to rewindToMidWordBreak() after it
computes fitBelowFloats().

rewindToMidWordBreak() uses LineWidth::availableWidth(), which
fitBelowFloats() may change if floats fill the whole line and the start
of the line is pushed down below the floats.

BUG=603679

Review URL: https://codereview.chromium.org/1900393002

Cr-Commit-Position: refs/heads/master@{#388996}

Former-commit-id: a4e4eb3b4334905bc874dea2264b450f029fb605